css/styles.css
@font-face {
  font-family: "Raleway";
  src: url("../font/Raleway-VariableFont_wght.ttf");
}

html {
  font-family: "Raleway";
}

.company_header {
  max-width: 100%;
  display: flex;
  justify-content: space-between;
  font-size: 12px;
}

.company_logo {
  margin-top: 2em;
  max-height: 4em;
}

.top_nav_menu {
  display: flex;
  justify-content: space-around;
}

.top_nav_menu a {
  color: #0065fc;
  text-decoration: none;
  padding-top: 4vh;
  /*margin-top: 3em;*/
  margin-left: 2em;
  margin-right: 2em;
}

.top_nav_menu a:hover {
  border-top: 1px solid #0065fc;
}

.top_nav_menu a:active {
  color: #08fc00;
}

/*Search Input Elements*/

.search_input_section {
  width: 100%;
}

.search_input_main_label {
  font-weight: bold;
}

.search_input_secondary_label {
  font-size: 10px;
}

.search_field_container {
  display: flex;
}

.search_field_location_logo {
  width: 2em;
  height: 2em;
  justify-content: center;
  align-items: center;
  background-color: #f2f2f2;
  padding-top: 0.7em;
  text-align: center;
}

.location_input_field {
  border: 1px solid #f2f2f2;
  outline: none;
  padding-left: 1em;
  font-weight: bold;
}

.location_search_button {
  width: 12em;
  border-bottom-right-radius: 0.4em;
  border-top-right-radius: 0.4em;
  background-color: #0065fc;
  color: white;
  font-weight: bold;
  outline: none;
  border: none;
}

.search_filters_container {
  display: flex;
  flex-wrap: wrap;
  margin-top: 2em;
}

.search_filters_label {
  font-weight: bold;
  height: 2em;
  width: 2em;
  margin-top: 0.6em;
  margin-right: 2em;
}

.search_filter {
  display: flex;
  margin: 0.2em;
}

.search_filter:hover {
  transform: scale(1.05); /*make filter look slightly bigger on mouse hover*/
  color: #0065fc;
}

.search_filter_icon {
  height: 2em;
  width: 2em;
  background-color: #deebff;
  border-radius: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: -1.5em;
  z-index: 2; /* To display icon div 'above' label div'*/
  color: #0065fc;
}

.search_filter_tag {
  border: 1px solid #f2f2f2;
  height: 2em;
  border-radius: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1; /* To display Label div 'under' icon div'*/
  padding-left: 2.2em;
  padding-right: 1em;
  font-weight: bold;
  font-size: 0.95em;
  user-select: none; /*To keep regular mouse pointer on hover*/
}

.nb_of_results_container {
  display: flex;
  margin-top: 2vh;
}

.nb_of_results_icon {
  color: #0065fc;
  margin-right: 0.5em;
}

.nb_of_results_label {
  font-size: 0.8em;
}

/*accommodation section layout and styling*/
/*main section*/

.accommodation_section {
  width: 100%;
  display: flex;
  margin-top: 2em;
}

.main_search_result {
  background-color: #f2f2f2;
  border-radius: 2vw;
  flex: 2;
  margin-right: 2em;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  /*justify-content: space-evenly;*/
}

.search_result_label {
  width: 100%;
  font-size: 2vw;
  font-weight: bolder;
  padding-left: 3vw;
  padding-top: 1vh;
}

.main_search_result_grid {
  width: 100%;
  height: 30vw;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 50% 50%;
  padding-left: 3vw;
}

.main_result_accommodation_thumbnail_generic {
  border-radius: 2vw;
  align-items: center;
  background-color: white;
  margin-bottom: 2vw;
  margin-right: 2vw;
}

.main_result_accommodation_thumbnail_1 {
  grid-column: 1 / 1;
  grid-row: 1 / 2;
  /*grid-row: 1 / 5;*/
}

.main_result_accommodation_thumbnail_2 {
  grid-column: 2 / 2;
  grid-row: 1 / 2;
  /*grid-row: 1 / 5;*/
}

.main_result_accommodation_thumbnail_3 {
  grid-column: 3 / 3;
  grid-row: 1 / 2;
  /*grid-row: 1 / 5;*/
}

.main_result_accommodation_thumbnail_4 {
  grid-column: 1 / 1;
  grid-row: 2 / 3;
  /*grid-row: 5 / 9;*/
}

.main_result_accommodation_thumbnail_5 {
  grid-column: 2 / 2;
  grid-row: 2 / 3;
  /*grid-row: 5 / 9;*/
}

.main_result_accommodation_thumbnail_6 {
  grid-column: 3 / 3;
  grid-row: 2 / 2;
  /*grid-row: 5 / 9;*/
}

.main_search_result a {
  text-decoration: none;
  margin-left: 1em;
  font-size: 11px;
}

.search_result_show_more,
.search_result_show_more:visited {
  width: 100%;
  font-weight: bold;
  color: black;
  margin-bottom: 1vh;
  padding-left: 3vw;
}

.main_result_accommodation_img {
  border-radius: 2vw 2vw 0 0;
  height: 60%;
  width: 96%;
  margin: 2% 2% 0% 2%;
  object-fit: cover; /*To avoid stretching and maintain aspect ratio*/
}

.main_result_accommodation_name {
  height: 12%;
  width: 96%;
  font-size: 1vw;
  font-weight: bold;
  margin-left: 1vw;
  padding-top: 0.5vw;
}

.main_result_accommodation_pricing {
  height: 12%;
  width: 96%;
  font-size: 1vw;
  margin-left: 1vw;
}

.main_result_accommodation_stars_container {
  display: flex;
  margin-left: 1vw;
  font-size: 0.9vw;
  height: 15%;
  margin-bottom: 1vw;
}

.blue_star {
  color: #0065fc;
}

.grey_star {
  color: lightgrey;
}

/*most wanted*/

.most_wanted_search_result {
  width: 100%;
  background-color: #f2f2f2;
  border-radius: 2vw;
  flex: 1;
  flex-wrap: wrap;
  align-items: flex-start;
}

.most_wanted_search_result_grid {
  width: 84%;
  height: 33vw;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 33.3% 33.3% 33.3%;
  /*grid-template-rows: 1fr 1fr 1fr;*/
  /*Does not work as expected (will give different sized fractions) used percentage method instead*/
  margin: 12% 8% 8% 8%;
}

.most_wanted_accommodation_thumbnail_generic {
  width: 100%;
  background-color: white;
  border-radius: 2vw;
  margin-bottom: 2vw;
  display: flex;
  flex-direction: row;
}

.most_wanted_accommodation_thumbnail_1 {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
}

.most_wanted_accommodation_thumbnail_2 {
  grid-column: 1 / 2;
  grid-row: 2 / 3;
}

.most_wanted_accommodation_thumbnail_3 {
  grid-column: 1 / 2;
  grid-row: 3 / 4;
}

.most_wanted_accommodation_img {
  border-radius: 2vw 0 0 2vw;
  height: 96%;
  width: 30%;
  margin: 0.2vw;
  object-fit: cover; /*To avoid stretching and maintain aspect ratio*/
}

.most_wanted_accommodation_labels_container {
  display: flex;
  flex-direction: column;
}

.most_wanted_accommodation_name {
  height: 20%;
  width: 100%;
  font-size: 1vw;
  font-weight: bold;
  margin-left: 1vw;
  padding-top: 0.5vw;
}

.most_wanted_accommodation_pricing {
  height: 60%;
  width: 100%;
  font-size: 1vw;
  margin-left: 1vw;
}

.most_wanted_accommodation_stars_container {
  display: flex;
  margin-left: 1vw;
  font-size: 0.9vw;
  height: 20%;
  margin-bottom: 0.2vw;
}

/*Activities*/

.search_result_related_activities {
  min-height: 15vh;
  width: 90%;
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
  grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
  grid-column-gap: 3.33%;
  margin-bottom: 1em;
}

.related_activity_thumbnail_1 {
  grid-column: 1 / 1;
  grid-row: 1 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_2 {
  grid-column: 2 / 2;
  grid-row: 1 / 6;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_3 {
  grid-column: 2 / 2;
  grid-row: 7 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_4 {
  grid-column: 3 / 3;
  grid-row: 1 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_5 {
  grid-column: 4 / 4;
  grid-row: 1 / 5;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_6 {
  grid-column: 4 / 4;
  grid-row: 5 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

/*footer*/

.footer {
  width: 100%;
  display: flex;
  background-color: #f2f2f2;
}

.about_us {
  width: 100%;
  flex: 1;
  margin-left: 2em;
}

.our_accommodations {
  width: 100%;
  flex: 1;
}

.help_center {
  width: 100%;
  flex: 1;
}

.footer_category {
  font-size: 12px;
  font-weight: bold;
  color: black;
}

.footer a {
  font-size: 10px;
  text-decoration: none;
  color: black;
}

